# pdf_reader_angular

./: .gitignore  Diagram.drawio  README.md  Untitled Diagram.drawio  docker-compose.yml  run.sh
backend/: .env.temp  .gitignore  .pre-commit-config.yaml  Dockerfile  PDF Manipulation API.postman_collection.json  PDFDataCLI.py  app.py  diagram.drawio  pyproject.toml  requirements.txt
backend/collection/: FirestoreCollection.json  GoogleCloudStorageCollection.json  PDF Manipulation API.postman_collection.json  PDF Manipulation API.postman_collection_v2.json  PDFCollection.json
backend/data/: I-140.data.updated.data.json  I-140_fields.json  fields_with_sections.json  fields_with_titles.json  fields_with_titles_description.json  filled_foorm.data.json  g-28.data.json  g-28.updated.data.json  i-129.data.json  i-129.data.updated.data.json  i-539.data.json  i-539.data.updated.data.json  i-907.data.json  i-907.data.updated.data.json  output.json  personal_data.json
backend/deploy/: .env.temp  .gitignore  README  deploy.sh  main.py  requirements.txt
backend/sandbox/: PDFFormExtractor_V2.py  sandbox_PDFFormExtractor.py  sandbox_value-check.py
backend/script/: AddDescription.py  FieldHandle.py  PDFDataCLI.py  PreFill.py  create_custom_architecture_drawio.py  sandbox.py
backend/src/: __init__.py  config.py
backend/test/: conftest.py  pytest.ini  pytest.py  run.py  test_config.py  test_firestore.py  test_generate_pdf.py  test_json_handler.py  test_logging.py  test_model_FormHandler.py  test_model_GeneratePDF.py  test_model_GoogleCloudStorage.py  test_model_firestore.py  test_pdf_fill.py  test_pdf_form_extractor.py
hosting/: .dockerignore  Dockerfile  README  deploy.sh  main.py  pyproject.toml  requirements.txt
(+275 files in other folders)
