[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["github-actions <jojoto8845@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pypdf2 = "^3.0.1"
pdfplumber = "^0.11.4"
pdfrw = "^0.4"
pymupdf = "^1.24.11"
colorlog = "^6.8.2"
python-dotenv = "^1.0.1"
firebase-admin = "^6.5.0"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
