[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["github-actions <jojoto8845@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pdfplumber = "^0.11.4"
pdfrw = "^0.4"
pymupdf = "^1.24.11"
colorlog = "^6.8.2"
python-dotenv = "^1.0.1"
firebase-admin = "^6.5.0"
flask-cors = "^5.0.0"
google-cloud-storage = "^2.18.2"
pycryptodome = "^3.21.0"
google-cloud-aiplatform = "^1.70.0"
google-generativeai = "^0.8.3"
pypdf = "^5.1.0"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
